5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1573_1332.log
== TEST (2019-03-27 10:57:09) 
-- CODE:
aresta = 5
area = 3 / 2 * ((3)**1/2) * aresta ** 2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:57:13) 
-- CODE:
aresta = 5
area = 3 / 2 * ((3)**1/2) * aresta ** 2
 
print(round(area, 4))
-- EXECUTION TIME:
0.186607
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:57:39) 
-- CODE:
aresta = 5
area = 3/2*((3)**1/2)*aresta** 2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:57:41) 
-- CODE:
aresta = 5
area = 3/2*((3)**1/2)*aresta** 2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:57:43) 
-- CODE:
aresta = 5
area = 3/2*((3)**1/2)*aresta** 2
 
print(round(area, 4))
-- EXECUTION TIME:
0.146234
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:57:43) 
-- CODE:
aresta = 5
area = 3/2*((3)**1/2)*aresta** 2
 
print(round(area, 4))
-- EXECUTION TIME:
0.130664
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:57:44) 
-- CODE:
aresta = 5
area = 3/2*((3)**1/2)*aresta** 2
 
print(round(area, 4))
-- EXECUTION TIME:
0.157453
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:58:03) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2)*aresta** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:58:14) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2)*aresta** 2
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:58:24) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2)*aresta** 2

print(round(area, 4))
-- EXECUTION TIME:
0.177452
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:58:40) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2)*aresta** 2
print(round(area, 4))
-- EXECUTION TIME:
0.144354
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:58:41) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2)*aresta** 2
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:58:49) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2)*aresta**2
print(round(area, 4))
-- EXECUTION TIME:
0.133517
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 10:59:14) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2))*aresta**2
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 10:59:17) 
-- CODE:
aresta = 5
area = 3/2*((3)**(1/2))*aresta**2
print(round(area, 4))
-- EXECUTION TIME:
0.127821
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
